[package]
name = "fuse"
edition = "2018"
version = "0.4.0-dev"
authors = ["Andreas Neuhaus <zargony@zargony.com>"]
description = "Rust library for filesystems in userspace (FUSE)"
documentation = "https://docs.rs/fuse"
homepage = "https://github.com/zargony/fuse-rs"
repository = "https://github.com/zargony/fuse-rs"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["api-bindings", "filesystem"]
license = "MIT"

[workspace]
members = [".", "fuse-abi", "fuse-sys"]

# [badges]
# travis-ci = { repository = "zargony/rust-fuse" }

[dependencies]
fuse-abi = { path = "./fuse-abi", version = "=0.4.0-dev" }
fuse-sys = { path = "./fuse-sys", version = "=0.4.0-dev" }
libc = "0.2"
log = "0.4"
thread-scoped = "1.0.2"
serde = {version = "1.0.110"}
serde_derive = {version = "1.0.110"}
mio = "0.6.19"
tracing = "0.1.14"

[dev-dependencies]
env_logger = "0.6"

[features]
serde_support = []
tracing_support = []
